--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
 envlist =
     {py27,py35}-django18,
-    {py27,py35}-django111
+    {py27,py35,py36}-django111
     {py35}-django21
+    {py36}-django22
 
 [travis:env]
 DJANGO =
     1.8: django18
     1.11: django111
     2.1: django21
+    2.2: django22
 
 [testenv]
 setenv =
@@ -18,7 +20,9 @@ deps =
     django18: Django>=1.8,<1.9
     django111: Django>=1.11,<2.0
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.4
     -r{toxinidir}/requirements_test.txt
 basepython =
+    py36: python3.6
     py35: python3.5
     py27: python2.7
